--- a/frontend-game/package.json
+++ b/frontend-game/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clockworklabs/spacetimedb-sdk": "^1.3.1",
     "@supabase/supabase-js": "^2.57.4",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
